Honor continueOnError for MutableSegmentImpl fail-soft indexing
Gate the new index/updateDictionary/addNewRow catch paths on
IngestionConfig.continueOnError (default false). When the flag is
disabled, indexing exceptions propagate; when enabled, keep fail-soft
defaults and incomplete-row metrics.

Co-authored-by: nrvamsi13 <nrvamsi13@gmail.com>