@@ -19,19 +19,23 @@
 package org.apache.pinot.segment.local.indexsegment.mutable;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import org.apache.pinot.common.metrics.ServerMeter;
 import org.apache.pinot.common.metrics.ServerMetrics;
 import org.apache.pinot.segment.local.PinotBuffersAfterMethodCheckRule;
+import org.apache.pinot.segment.local.realtime.impl.RealtimeSegmentConfig;
+import org.apache.pinot.segment.local.segment.index.loader.IndexLoadingConfig;
 import org.apache.pinot.segment.spi.datasource.DataSourceMetadata;
 import org.apache.pinot.spi.config.table.JsonIndexConfig;
+import org.apache.pinot.spi.config.table.TableConfig;
+import org.apache.pinot.spi.config.table.TableType;
+import org.apache.pinot.spi.config.table.ingestion.IngestionConfig;
 import org.apache.pinot.spi.data.FieldSpec;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.data.readers.GenericRow;
 import org.apache.pinot.spi.stream.StreamMessageMetadata;
+import org.apache.pinot.spi.utils.builder.TableConfigBuilder;
 import org.roaringbitmap.buffer.ImmutableRoaringBitmap;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
@@ -41,7 +45,9 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.matches;
 import static org.mockito.Mockito.*;
 import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.expectThrows;
 
 
 public class IndexingFailureTest implements PinotBuffersAfterMethodCheckRule {
@@ -63,10 +69,13 @@ public class IndexingFailureTest implements PinotBuffersAfterMethodCheckRule {
         .setSchemaName(TABLE_NAME)
         .build();
     _serverMetrics = mock(ServerMetrics.class);
-    _mutableSegment =
-        MutableSegmentImplTestUtils.createMutableSegmentImpl(schema, Set.of(), Set.of(),
-            new HashSet<>(Arrays.asList(INT_COL, STRING_COL)),
-            Map.of(JSON_COL, new JsonIndexConfig()), _serverMetrics);
+    _mutableSegment = createSegment(schema, Set.of(), Set.of(INT_COL, STRING_COL), _serverMetrics, true);
+  }
+
+  private static MutableSegmentImpl createSegment(Schema schema, Set<String> noDictionaryColumns,
+      Set<String> invertedIndexColumns, ServerMetrics serverMetrics, boolean continueOnError) {
+    return MutableSegmentImplTestUtils.createMutableSegmentImpl(schema, noDictionaryColumns, Set.of(),
+        invertedIndexColumns, Map.of(JSON_COL, new JsonIndexConfig()), serverMetrics, continueOnError);
   }
 
   @AfterMethod
@@ -217,7 +226,7 @@ public class IndexingFailureTest implements PinotBuffersAfterMethodCheckRule {
         .build();
     MutableSegmentImpl segment =
         MutableSegmentImplTestUtils.createMutableSegmentImpl(schema, Set.of(METRIC_COL), Set.of(), Set.of(INT_COL),
-            true);
+            true, false, true);
     try {
       segment.index(badDimensionRow("not-an-int", 1L), METADATA);
       segment.index(badDimensionRow("also-not-an-int", 2L), METADATA);
@@ -267,9 +276,7 @@ public class IndexingFailureTest implements PinotBuffersAfterMethodCheckRule {
         .setSchemaName(TABLE_NAME)
         .build();
     ServerMetrics serverMetrics = mock(ServerMetrics.class);
-    MutableSegmentImpl segment =
-        MutableSegmentImplTestUtils.createMutableSegmentImpl(schema, Set.of(STRING_COL), Set.of(), Set.of(INT_COL),
-            Map.of(JSON_COL, new JsonIndexConfig()), serverMetrics);
+    MutableSegmentImpl segment = createSegment(schema, Set.of(STRING_COL), Set.of(INT_COL), serverMetrics, true);
     try {
       // Only the null substitution goes wrong on this row.
       segment.index(nullStringRow("{\"valid\": \"json\"}"), METADATA);
@@ -290,5 +297,155 @@ public class IndexingFailureTest implements PinotBuffersAfterMethodCheckRule {
     } finally {
       segment.destroy();
     }
+  }
+
+  @Test
+  public void testContinueOnErrorIsReadFromIngestionConfig() {
+    Schema schema = new Schema.SchemaBuilder().addSingleValueDimension(INT_COL, FieldSpec.DataType.INT)
+        .setSchemaName(TABLE_NAME)
+        .build();
+    IngestionConfig ingestionConfig = new IngestionConfig();
+    ingestionConfig.setContinueOnError(true);
+    TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
+        .setIngestionConfig(ingestionConfig)
+        .build();
+
+    RealtimeSegmentConfig fromTableConfig = new RealtimeSegmentConfig.Builder(tableConfig, schema).build();
+    assertTrue(fromTableConfig.isContinueOnError());
+
+    RealtimeSegmentConfig fromIndexLoadingConfig =
+        new RealtimeSegmentConfig.Builder(new IndexLoadingConfig(tableConfig, schema)).build();
+    assertTrue(fromIndexLoadingConfig.isContinueOnError());
+
+    TableConfig defaultTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
+    RealtimeSegmentConfig defaultFromTableConfig =
+        new RealtimeSegmentConfig.Builder(defaultTableConfig, schema).build();
+    assertFalse(defaultFromTableConfig.isContinueOnError());
+    RealtimeSegmentConfig defaultFromIndexLoadingConfig =
+        new RealtimeSegmentConfig.Builder(new IndexLoadingConfig(defaultTableConfig, schema)).build();
+    assertFalse(defaultFromIndexLoadingConfig.isContinueOnError());
+  }
+
+  @Test
+  public void testContinueOnErrorFalsePropagatesDictionaryFailure()
+      throws IOException {
+    Schema schema = defaultSchema();
+    ServerMetrics serverMetrics = mock(ServerMetrics.class);
+    MutableSegmentImpl segment = createSegment(schema, Set.of(), Set.of(INT_COL, STRING_COL), serverMetrics, false);
+    try {
+      expectThrows(Exception.class, () -> segment.index(badDictionaryRow(), METADATA));
+      assertEquals(segment.getNumDocsIndexed(), 0);
+      verify(serverMetrics, never()).addMeteredTableValue(eq(TABLE_NAME + "_REALTIME"),
+          eq(ServerMeter.INCOMPLETE_REALTIME_ROWS_CONSUMED), anyLong());
+
+      segment.index(goodRow(1, "ok"), METADATA);
+      assertEquals(segment.getNumDocsIndexed(), 1);
+      assertEquals(segment.getRecord(0, new GenericRow()).getValue(INT_COL), 1);
+    } finally {
+      segment.destroy();
+    }
+  }
+
+  @Test
+  public void testContinueOnErrorFalsePropagatesAddNewRowFailure()
+      throws IOException {
+    Schema schema = defaultSchema();
+    ServerMetrics serverMetrics = mock(ServerMetrics.class);
+    MutableSegmentImpl segment = createSegment(schema, Set.of(), Set.of(INT_COL, STRING_COL), serverMetrics, false);
+    try {
+      expectThrows(Exception.class, () -> segment.index(badJsonRow(), METADATA));
+      assertEquals(segment.getNumDocsIndexed(), 0);
+      verify(serverMetrics, never()).addMeteredTableValue(eq(TABLE_NAME + "_REALTIME"),
+          eq(ServerMeter.INCOMPLETE_REALTIME_ROWS_CONSUMED), anyLong());
+
+      segment.index(goodRow(8, "ok"), METADATA);
+      assertEquals(segment.getNumDocsIndexed(), 1);
+      GenericRow result = segment.getRecord(0, new GenericRow());
+      assertEquals(result.getValue(INT_COL), 8);
+      assertEquals(result.getValue(STRING_COL), "ok");
+    } finally {
+      segment.destroy();
+    }
+  }
+
+  @Test
+  public void testContinueOnErrorFalsePropagatesAggregateMetricsFailure()
+      throws IOException {
+    Schema schema = new Schema.SchemaBuilder().addSingleValueDimension(INT_COL, FieldSpec.DataType.INT)
+        .addMetric(METRIC_COL, FieldSpec.DataType.LONG)
+        .setSchemaName(TABLE_NAME)
+        .build();
+    MutableSegmentImpl segment =
+        MutableSegmentImplTestUtils.createMutableSegmentImpl(schema, Set.of(METRIC_COL), Set.of(), Set.of(INT_COL),
+            true, false, false);
+    try {
+      GenericRow first = new GenericRow();
+      first.putValue(INT_COL, 1);
+      first.putValue(METRIC_COL, 10L);
+      segment.index(first, METADATA);
+      assertEquals(segment.getNumDocsIndexed(), 1);
+
+      GenericRow badRollup = new GenericRow();
+      badRollup.putValue(INT_COL, 1);
+      badRollup.putValue(METRIC_COL, "not-a-number");
+      expectThrows(Exception.class, () -> segment.index(badRollup, METADATA));
+      assertEquals(segment.getNumDocsIndexed(), 1);
+      assertEquals(segment.getRecord(0, new GenericRow()).getValue(METRIC_COL), 10L);
+    } finally {
+      segment.destroy();
+    }
+  }
+
+  @Test
+  public void testContinueOnErrorTrueFailSoftOnDictionaryAndJsonErrors()
+      throws IOException {
+    // Same inputs as the strict tests, but continueOnError=true must keep fail-soft (#16316).
+    Schema schema = defaultSchema();
+    ServerMetrics serverMetrics = mock(ServerMetrics.class);
+    MutableSegmentImpl segment = createSegment(schema, Set.of(), Set.of(INT_COL, STRING_COL), serverMetrics, true);
+    try {
+      segment.index(badDictionaryRow(), METADATA);
+      segment.index(badJsonRow(), METADATA);
+      assertEquals(segment.getNumDocsIndexed(), 2);
+      assertEquals(segment.getRecord(0, new GenericRow()).getValue(INT_COL),
+          FieldSpec.DEFAULT_DIMENSION_NULL_VALUE_OF_INT);
+      assertEquals(segment.getRecord(1, new GenericRow()).getValue(STRING_COL), "bad-json-row");
+      verify(serverMetrics, times(2)).addMeteredTableValue(eq(TABLE_NAME + "_REALTIME"),
+          eq(ServerMeter.INCOMPLETE_REALTIME_ROWS_CONSUMED), eq(1L));
+    } finally {
+      segment.destroy();
+    }
+  }
+
+  private static Schema defaultSchema() {
+    return new Schema.SchemaBuilder().addSingleValueDimension(INT_COL, FieldSpec.DataType.INT)
+        .addSingleValueDimension(STRING_COL, FieldSpec.DataType.STRING)
+        .addSingleValueDimension(JSON_COL, FieldSpec.DataType.JSON)
+        .setSchemaName(TABLE_NAME)
+        .build();
+  }
+
+  private static GenericRow goodRow(int intValue, String stringValue) {
+    GenericRow row = new GenericRow();
+    row.putValue(INT_COL, intValue);
+    row.putValue(STRING_COL, stringValue);
+    row.putValue(JSON_COL, "{\"valid\": \"json\"}");
+    return row;
+  }
+
+  private static GenericRow badDictionaryRow() {
+    GenericRow row = new GenericRow();
+    row.putValue(INT_COL, "not-an-int");
+    row.putValue(STRING_COL, "a");
+    row.putValue(JSON_COL, "{\"valid\": \"json\"}");
+    return row;
+  }
+
+  private static GenericRow badJsonRow() {
+    GenericRow row = new GenericRow();
+    row.putValue(INT_COL, 7);
+    row.putValue(STRING_COL, "bad-json-row");
+    row.putValue(JSON_COL, "{\"truncatedJson...");
+    return row;
   }
 }
